@@ -1,3 +1,7 @@
+2005-08-25  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpview.[ch]: minor code and formatting cleanup. 
+
 2005-08-25  Sven Neumann  <sven@gimp.org>
 
 	* app/base/siox.[ch]
